# treetop-core

./: Cargo.toml  Changelog.md  LICENSE  README.md
.github/workflows/: perf.yml  rust.yml
benches/: bench_iai_attr_value.rs  bench_iai_entity_uid.rs  bench_iai_loader.rs  bench_iai_metrics.rs  bench_iai_policy_match.rs  bench_iai_query.rs  bench_iai_timers.rs  evaluate_common.rs  evaluate_criterion.rs  evaluate_criterion_baseline.rs  evaluate_criterion_groups.rs  evaluate_criterion_labels.rs  evaluate_criterion_namespaced.rs  evaluate_iai.rs  evaluate_iai_baseline.rs  evaluate_iai_groups.rs  evaluate_iai_labels.rs  evaluate_iai_namespaced.rs
docs/: Metrics.md  Perf.md
examples/: opentelemetry_tracing.rs  policy_counter_sink.rs  prometheus_sink.rs
scripts/perf/: compare_criterion.py
src/: bench_helpers.rs  build_info.rs  cedar_types.rs  engine.rs  error.rs  host_name_labels.rs  labels.rs  lib.rs  loader.rs  metrics.rs  models.rs  policy_match.rs  query.rs  timers.rs  traits.rs
src/engine/tests/: core.rs  evaluate.rs  listing.rs  mod.rs  reload.rs  schema.rs
src/snapshots/: treetop_core__engine__tests__evaluate__test_create_host_requests__alice_create_host_allow.snap  treetop_core__engine__tests__evaluate__test_evaluate_requests__alice_delete_allow.snap  treetop_core__engine__tests__evaluate__test_evaluate_requests__bob_view_allow.snap  treetop_core__engine__tests__evaluate__test_generic_policies__alice_assign_gateway_allow.snap  treetop_core__engine__tests__evaluate__test_group_direct_access__users_delete_deny.snap  treetop_core__engine__tests__evaluate__test_namespaces__bob_namespace_furniture_allow.snap  treetop_core__engine__tests__evaluate__test_only_here_policy__bob_deny.snap  treetop_core__engine__tests__evaluate__test_policy_with_forbid__alice_edit_deny_explicit.snap  treetop_core__engine__tests__evaluate__test_policy_with_forbid__alice_view_allow.snap  treetop_core__engine__tests__evaluate__test_policy_with_host_patterns__bob_host_pattern_no_web_deny.snap  treetop_core__engine__tests__policy_by_id.snap  treetop_core__engine__tests__policysnapshot_policies.snap  treetop_core__engine__tests__policysnapshot_policies.snap.new  treetop_core__engine__tests__test_create_host_requests__alice_create_host_allow.snap  treetop_core__engine__tests__test_create_host_requests__alice_create_host_wrong_name_deny.snap  treetop_core__engine__tests__test_create_host_requests__bob_create_host_allow.snap  treetop_core__engine__tests__test_evaluate_requests__alice_delete_allow.snap  treetop_core__engine__tests__test_evaluate_requests__alice_edit_allow.snap  treetop_core__engine__tests__test_evaluate_requests__alice_view_deny_wrong_photo.snap  treetop_core__engine__tests__test_evaluate_requests__bob_view_allow.snap  treetop_core__engine__tests__test_evaluate_requests__charlie_view_deny.snap  treetop_core__engine__tests__test_generic_policies__alice_assign_gateway_allow.snap  treetop_core__engine__tests__test_generic_policies__bob_assign_gateway_deny.snap  treetop_core__engine__tests__test_group_direct_access__admins_delete_allow.snap  treetop_core__engine__tests__test_group_direct_access__users_view_allow.snap  treetop_core__engine__tests__test_ip_functionality__alice_ip_allow_1.snap  treetop_core__engine__tests__test_ip_functionality__alice_ip_allow_same_network.snap  treetop_core__engine__tests__test_ip_functionality__alice_ip_allow_subnet_of_network.snap  treetop_core__engine__tests__test_ip_functionality__alice_ip_deny_largernetwork.snap  treetop_core__engine__tests__test_namespaces__alice_namespace_database_create_allow.snap  treetop_core__engine__tests__test_namespaces__bob_namespace_database_create_deny.snap  treetop_core__engine__tests__test_namespaces__bob_namespace_database_view_allow.snap  treetop_core__engine__tests__test_namespaces__bob_namespace_furniture_allow.snap  treetop_core__engine__tests__test_only_here_policy__alice_allow.snap  treetop_core__engine__tests__test_policy_with_forbid__alice_view_allow.snap  treetop_core__engine__tests__test_policy_with_groups__bob_view_allow.snap  treetop_core__engine__tests__test_policy_with_host_patterns__alice_no_web_allow.snap  treetop_core__engine__tests__test_policy_with_host_patterns__alice_web_and_example_allow.snap  treetop_core__engine__tests__test_policy_with_host_patterns__bob_web_and_example_allow.snap  treetop_core__models__tests__assert_action_serialization__action_with_multiple_namespaces-2.snap  (+16 more)
src/tests/: dns.rs  metrics_integration.rs  mod.rs  snapshot.rs
src/tests/snapshots/: treetop_core__tests__dns__tests__test_host_operations__alice_allow_view_host.snap.new  treetop_core__tests__dns__tests__test_host_operations__alice_create_host_allow.snap  treetop_core__tests__dns__tests__test_host_operations__alice_delete_host_allow.snap  treetop_core__tests__dns__tests__test_host_operations__bob_view_host_allow.snap  (+4 more)
src/types/: action.rs  attr_value.rs  cedar_type.rs  decision.rs  entity_uid.rs  group.rs  mod.rs  principal.rs  qualified_id.rs  request.rs  request_context.rs  resource.rs  user.rs  user_policies.rs
(+17 files in other folders)
