[package]
name = "treetop-core"
version = "0.0.5"
edition = "2024"
license = "MIT"
description = "Core library for Treetop, a Cedar policy engine implementation."
documentation = "https://docs.rs/treetop-core/latest/treetop_core/"
repository = "https://github.com/terjekv/treetop-core"
readme = "README.md"
keywords = ["cedar", "policy", "authentication"]

[dependencies]
cedar-policy = { version = "4.4" }
cedar-policy-core = "4.4"
insta = { version = "1.43.1", features = ["json", "serde"] }
itertools = "0.14"
once_cell = "1.21"
regex = "1.11"
serde = { version = "1.0", features = ["derive", "serde_derive"] }
serde_json = "1.0"
strum = { version = "0.27", features = ["derive", "strum_macros"] }
strum_macros = "0.27"
thiserror = "2.0"
tracing = "0.1"
yare = "3.0"
