[package]
name = "treetop-core"
version = "0.0.13"
edition = "2024"
license = "MIT"
description = "Core library for Treetop, a Cedar policy engine implementation."
documentation = "https://docs.rs/treetop-core/latest/treetop_core/"
repository = "https://github.com/terjekv/treetop-core"
readme = "README.md"
keywords = ["cedar", "policy", "authentication"]

[dependencies]
cedar-policy = "4.5"
cedar-policy-core = "4.5"
humantime = "2"
sha2 = "0.10"
insta = { version = "1", features = ["json", "serde", "redactions"] }
itertools = "0.14"
regex = "1.11"
serde = { version = "1.0", features = ["derive", "serde_derive"] }
serde_json = "1.0"
strum = { version = "0.27", features = ["derive", "strum_macros"] }
strum_macros = "0.27"
thiserror = "2.0"
tracing = "0.1"
utoipa = "5.4.0"
yare = "3.0"
arc-swap = "1"

[build-dependencies]
vergen = { version = "9", features = [
    "emit_and_set",
    "build",
    "cargo",
    "rustc",
    "si",
] }
vergen-gitcl = { version = "9", features = [
    "emit_and_set",
    "build",
    "cargo",
    "rustc",
    "si",
] }

[features]
default = []
# Enable metrics collection (via MetricsSink) and tracing spans for observability.
# Consumers can integrate with OpenTelemetry, Prometheus, or any metrics backend.
observability = []

[dev-dependencies]
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
