[package]
name = "treetop-core"
version = "0.0.15"
edition = "2024"
license = "MIT"
description = "Core library for Treetop, a Cedar policy engine implementation."
documentation = "https://docs.rs/treetop-core/latest/treetop_core/"
repository = "https://github.com/terjekv/treetop-core"
readme = "README.md"
keywords = ["cedar", "policy", "authentication"]

[dependencies]
cedar-policy = "4.5"
cedar-policy-core = "4.5"
humantime = "2"
sha2 = "0.10"
insta = { version = "1", features = ["json", "serde", "redactions"] }
itertools = "0.14"
regex = "1.12"
serde = { version = "1.0", features = ["derive", "serde_derive"] }
serde_json = "1.0"
strum = { version = "0.27", features = ["derive", "strum_macros"] }
strum_macros = "0.27"
thiserror = "2.0"
tracing = "0.1"
utoipa = "5.4.0"
yare = "3.0"
arc-swap = "1"

[build-dependencies]
vergen = { version = "9", features = [
    "emit_and_set",
    "build",
    "cargo",
    "rustc",
    "si",
] }
vergen-gitcl = { version = "9", features = [
    "emit_and_set",
    "build",
    "cargo",
    "rustc",
    "si",
] }

[features]
default = []
# Enable metrics collection (via MetricsSink) and tracing spans for observability.
# Consumers can integrate with OpenTelemetry, Prometheus, or any metrics backend.
observability = []
# Expose internal helpers for benchmarks without making them part of the public API.
bench-internal = []

[dev-dependencies]
criterion = "0.8"
iai-callgrind = "0.16"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
serial_test = "3"

[[example]]
name = "prometheus_sink"
required-features = ["observability"]

[[example]]
name = "opentelemetry_tracing"
required-features = ["observability"]

[[bench]]
name = "evaluate_criterion_baseline"
harness = false

[[bench]]
name = "evaluate_criterion_groups"
harness = false

[[bench]]
name = "evaluate_criterion_labels"
harness = false

[[bench]]
name = "evaluate_criterion_namespaced"
harness = false

[[bench]]
name = "evaluate_iai_baseline"
harness = false

[[bench]]
name = "evaluate_iai_groups"
harness = false

[[bench]]
name = "evaluate_iai_labels"
harness = false

[[bench]]
name = "evaluate_iai_namespaced"
harness = false

[[bench]]
name = "bench_iai_loader"
harness = false
required-features = ["bench-internal"]

[[bench]]
name = "bench_iai_policy_match"
harness = false
required-features = ["bench-internal"]

[[bench]]
name = "bench_iai_query"
harness = false
required-features = ["bench-internal"]

[[bench]]
name = "bench_iai_entity_uid"
harness = false
required-features = ["bench-internal"]

[[bench]]
name = "bench_iai_attr_value"
harness = false
required-features = ["bench-internal"]

[[bench]]
name = "bench_iai_metrics"
harness = false
required-features = ["bench-internal"]

[[bench]]
name = "bench_iai_timers"
harness = false
required-features = ["bench-internal"]
